@@ -9,46 +9,53 @@ uses
   utilwmi,
   contnrs;
 
-function osGetWMI(WMIClass : string; WMIPropertyList : Tstrings; WMICondition : string; var WMIResultList : Tstringlist; var ErrorMsg : string) : boolean;
+function osGetWMI(WMIClass: string; WMIPropertyList: TStrings;
+  WMICondition: string; var WMIResultList: TStringList;
+  var ErrorMsg: string): boolean;
 
 implementation
 
-function osGetWMI(WMIClass : string; WMIPropertyList : Tstrings; WMICondition : string; var WMIResultList : Tstringlist; var ErrorMsg : string) : boolean;
+function osGetWMI(WMIClass: string; WMIPropertyList: TStrings;
+  WMICondition: string; var WMIResultList: TStringList;
+  var ErrorMsg: string): boolean;
 var
-  WMIResult : TFPObjectList;
-  i : integer;
-  PropNames         : Array of String;
-  Request       : String;
+  WMIResult: TFPObjectList;
+  i: integer;
+  PropNames: array of string;
+  Request: string;
 begin
-  result := false;
+  Result := False;
   try
-  try
-    for i := 0 to WMIPropertyList.count -1 do
-    begin
-     SetLength(PropNames, i + 1);
-     PropNames[i] := WMIPropertyList.strings[i];
+    try
+      for i := 0 to WMIPropertyList.Count - 1 do
+      begin
+        SetLength(PropNames, i + 1);
+        PropNames[i] := WMIPropertyList.strings[i];
+      end;
+      if (WMICondition = '') and (WMIPropertyList.Count = 0) then
+        WMIResult := GetWMIInfoClass(WMIClass)
+      else
+        WMIResult := GetWMIInfo(WMIClass, PropNames,WMICondition,Request);
+      WMIResultList.Clear;
+      for i := 0 to Pred(WMIResult.Count) do
+      begin
+        WMIResultList.Add(TStringList(WMIResult.Items[i]).Text);
+      end;
+      Result := True;
+    except
+      on E: Exception do
+      begin
+        ErrorMsg := ErrorMsg + 'Exception while calling WMI: ' + Request +
+          ' Message: ' + E.Message;
+        WMIResult := nil;
+      end;
     end;
-    //WMIResult := GetWMIInfo(WMIClass, PropNames,WMICondition,Request);
-    WMIResult := GetWMIInfoClass(WMIClass);
-    WMIResultList.Clear;
-    for i := 0 to Pred(WMIResult.Count) do
-    begin
-      WMIResultList.Add(TStringlist(WMIResult.Items[i]).Text);
-    end;
-    result := true;
-  except
-    on E : Exception  do
-    begin
-      ErrorMsg := ErrorMsg + 'Exception while calling WMI: '+Request+' Message: '+E.Message;
-      WMIResult := nil;
-    end;
-  end;
   finally
-    if Assigned(WMIResult) then FreeandNil(WMIResult);
+    if Assigned(WMIResult) then
+      FreeAndNil(WMIResult);
     SetLength(PropNames, 0);
   end;
 
 end;
 
 end.
-
