@@ -142,7 +142,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="43">
+    <Units Count="45">
       <Unit0>
         <Filename Value="winst.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -336,6 +336,14 @@
         <Filename Value="..\common\osnetutil.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit42>
+      <Unit43>
+        <Filename Value="..\common\oswmi.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit43>
+      <Unit44>
+        <Filename Value="..\external_libraries\misc\utilwmi.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit44>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
