@@ -22,7 +22,7 @@
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="4"/>
       <MinorVersionNr Value="12"/>
-      <BuildNr Value="32"/>
+      <BuildNr Value="33"/>
       <StringTable Comments="Compiled with Lazarus 1.8.4 / FPC 3.0.4" CompanyName="uib gmbh (uib.de / opsi.org)" FileDescription="opsi-script" InternalName="winst64.exe" LegalCopyright="AGPL v3" LegalTrademarks="opsi / opsi.org / open pc server integration" OriginalFilename="winst64.exe" ProductName="opsi-script" ProductVersion="4.1.0.0"/>
     </VersionInfo>
     <BuildModes Count="4" Active="Release">
@@ -569,17 +569,17 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="8"/>
         <TopLine Value="8726"/>
-        <CursorPos X="41" Y="8747"/>
+        <CursorPos X="32" Y="8736"/>
         <ExtraEditorCount Value="2"/>
         <ExtraEditor1>
+          <TopLine Value="2655"/>
+          <CursorPos X="26" Y="2655"/>
+        </ExtraEditor1>
+        <ExtraEditor2>
           <EditorIndex Value="1"/>
           <WindowIndex Value="1"/>
           <TopLine Value="10060"/>
           <CursorPos X="21" Y="10080"/>
-        </ExtraEditor1>
-        <ExtraEditor2>
-          <TopLine Value="2655"/>
-          <CursorPos X="26" Y="2655"/>
         </ExtraEditor2>
         <UsageCount Value="209"/>
         <Loaded Value="True"/>
@@ -607,7 +607,7 @@
         <IsPartOfProject Value="True"/>
         <IsVisibleTab Value="True"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="7628"/>
+        <TopLine Value="7724"/>
         <CursorPos X="48" Y="7727"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
@@ -938,7 +938,7 @@
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit82>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="osmain.pas"/>
         <Caret Line="560" Column="43" TopLine="550"/>
@@ -1037,28 +1037,24 @@
       </Position24>
       <Position25>
         <Filename Value="osfunc.pas"/>
-        <Caret Line="9086" Column="43" TopLine="9091"/>
+        <Caret Line="9028" Column="16" TopLine="9011"/>
       </Position25>
       <Position26>
         <Filename Value="osfunc.pas"/>
-        <Caret Line="9028" Column="16" TopLine="9011"/>
+        <Caret Line="8694" Column="10" TopLine="8679"/>
       </Position26>
       <Position27>
         <Filename Value="osfunc.pas"/>
-        <Caret Line="8694" Column="10" TopLine="8679"/>
+        <Caret Line="8579" Column="10" TopLine="8563"/>
       </Position27>
       <Position28>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="8579" Column="10" TopLine="8563"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="20714" Column="33" TopLine="20714"/>
       </Position28>
       <Position29>
         <Filename Value="osparser.pas"/>
-        <Caret Line="20714" Column="33" TopLine="20714"/>
-      </Position29>
-      <Position30>
-        <Filename Value="osparser.pas"/>
         <Caret Line="1188" Column="16" TopLine="1170"/>
-      </Position30>
+      </Position29>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
